# integrations

./: .gitignore  Dockerfile  LICENSE  README.md  glama.json  server.py
.github/workflows/: validate.yml
a2a/: README.md  __main__.py  agent_executor.py  pyproject.toml  test_client.py
cursor/: blueprint-core.md  blueprint-doctrine.mdc
docs/: api-contract.md  provider-matrix.md  publishing-rules.md
docs/setup/: claude-code.md  codex.md  cursor.md  gemini-cli.md  github-copilot.md  local-models.md  openai-actions.md  windsurf.md
exports/: blueprint.json
gemini/: GEMINI.md
github-copilot/: copilot-instructions.md
mcp/: README.md  claude-code.mcp.json  codex.config.toml
open-weights/: system-prompt-deepseek.md  system-prompt-qwen.md
pypi/: README.md  pyproject.toml  server.json
pypi/aidesignblueprint_mcp/: __init__.py
shared/: AGENTS.md  blueprint-core.md  llms.txt
windsurf/: blueprint-core.md
