[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidesignblueprint-mcp"
version = "1.0.0"
description = "MCP server metadata for AI Design Blueprint Doctrine — remote endpoint at https://aidesignblueprint.com/mcp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "ai-agents", "doctrine", "agentic-ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://aidesignblueprint.com"
Documentation = "https://aidesignblueprint.com/en/for-agents"
Repository = "https://github.com/aidesignblueprint/integrations"
"MCP Endpoint" = "https://aidesignblueprint.com/mcp"
